--- a/app/static/css/slyle.css
+++ b/app/static/css/slyle.css
@@ -335,10 +335,6 @@ body {
     margin-bottom: 10px;
 }
 
-input:nth-child(11) {
-    margin-bottom: 100px;
-}
-
 .form div {
     font-size: 25px;
     margin-bottom: 15px;
@@ -530,4 +526,29 @@ margin-bottom:10px;
     position:absolute;
     top: 680px;
     left: 1115px;
+}
+.rueng{
+font-size:20px;
+border:1px solid #FF9A32;
+border-radius:10px;
+background:white;
+display:flex;
+gap:2px;
+}
+
+.rueng p{
+    padding:10px;
+    height:100%;
+    cursor:pointer;
+}
+.rueng p:nth-child(1){
+    border-top-left-radius:10px;
+    border-bottom-left-radius:10px;
+    }
+.rueng p:nth-child(2){
+    border-top-right-radius:10px;
+    border-bottom-right-radius:10px;
+    }
+.activeLang{
+background:rgba(186, 127, 31, 0.5);
 }
