--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,7 @@
             defer
         ></script>
         <script src="static/js/mane.js" defer></script>
+        <script src="static/js/rueng.js" defer></script>
         <script src="static/js/current_login.js" defer></script>
     </head>
     <body>
@@ -24,17 +25,21 @@
                             alt="logo"
                         />
                     </a>
-                    <a class="navigation__contant-text" href="./index.html"
+                    <a id="lang1" class="navigation__contant-text" href="./index.html"
                         >Рецепты</a
                     >
+                    <div class="rueng">
+                        <p class="langRu activeLang">Ru</p>
+                        <p class="langEng ">Eng</p>
+                    </div>
                 </div>
 
                 <div class="navigation__btns">
-                    <a class="navigation__login" href="./login.html">Авторизация</a>
-                    <a class="navigation__login" href="./register.html">Зарегистрироваться</a>
-                    <a class="navigation__login disableRecipe" href="./new_recipe.html">Добавить рецепт</a>
+                    <a id="lang2" class="navigation__login" href="./login.html">Авторизация</a>
+                    <a id="lang3" class="navigation__login" href="./register.html">Зарегистрироваться</a>
+                    <a id="lang4" class="navigation__login disableRecipe" href="./new_recipe.html">Добавить рецепт</a>
                     <div class="disable" id="user-data" data-name="{{ name_user }}"></div>
-                    <a class="quit disable" href="./index.html">Выйти </a>
+                    <a id="lang5" class="quit disable" href="./index.html">Выйти </a>
                 </div>
             </nav>
         </header>
@@ -51,13 +56,13 @@
         </main>
         <footer class="footer">
             <div class="footer-svgs container">
-                <a href="https://vk.com/iris_mertv"
+                <a href="https://t.me/recipe_for_site"
                     ><img src="static/img/telegram.svg" alt=""
                 /></a>
                 <a href="https://vk.com/iris_mertv"
                     ><img src="static/img/vk.svg" alt=""
                 /></a>
-                <a href="https://vk.com/iris_mertv"
+                <a href="https://chat.whatsapp.com/FXmIYEXmVENFRDY80oXYC7"
                     ><img src="static/img/whatsapp.svg" alt=""
                 /></a>
             </div>
