--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -33,8 +33,8 @@
                         </div>
                     </div>
                     <div class="navigation__btns">
-                        <a id="lang2" class="navigation__login" href="./login.html">Авторизация</a>
-                        <a id="lang3" class="navigation__login" href="./register.html">Зарегистрироваться</a>
+                        <a id="lang2" class="navigation__login currentBtnRecipe" href="./login.html">Авторизация</a>
+                        <a id="lang3" class="navigation__login currentBtnRecipe" href="./register.html">Зарегистрироваться</a>
                     </div>
                 </div>
             </nav>
