--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -41,7 +41,7 @@
             <form action="#" id="myForm">
                 <div id="lang9" class="name">Введите ваше имя:</div>
                 <input type="text" placeholder="Имя" id="nameInput">
-                <div id="nameError"></div>
+                <div id="namedError"></div>
                 <div id="lang10" class="name">Введите вашу фамилию:</div>
                 <input type="text" placeholder="Фамилия" id="surnameInput">
                 <div id="surnameError"></div>
